Wed Oct  7 10:15:50 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* dir.c (dir_chdir, dir_s_mkdir, dir_s_rmdir): use wrapper macros
	  instead of using platform ifdefs.

Wed Oct  7 09:23:49 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_inspect): don't assign -1 to unsigned int.

Wed Oct  7 00:27:01 2009  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (Resolv::DNS.bind_random_port): bind to "::" for IPv6.
	  (Resolv::DNS::ConnectedUDP#initialize): specify is_ipv6 argument of
	  bind_random_port.
	  [ruby-core:25970]

Tue Oct  6 23:32:38 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_upto): RDoc updated.  a patch from Nobuhiro
	  IMAI <nov at yo.rim.or.jp> in [ruby-dev:39440]. [ruby-dev:39439]

Tue Oct  6 21:30:58 2009  Tanaka Akira  <akr@fsij.org>

	* io.c (io_reopen): avoid close if possible.

Tue Oct  6 18:56:09 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* struct.c (rb_struct_select): Struct#select should return
	  enumerator when no block given.

Tue Oct  6 06:26:00 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* * ext/tk/lib/tk/canvas.rb: *** POTENTIALLY INCOMPATIBLE ***
	  'tags' option of a TkcItem object should give a list of TkcTag objs.

	* ext/tk/lib/tkextlib/vu/dial.rb: fix logical bug.

	* ext/tk/lib/tk/canvas.rb, ext/tk/lib/tkextlib/blt/component.rb: 
	  lack of support for methodcall_optkeys.

Mon Oct  5 17:19:33 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/delegate.rb (Delegator::public_api): take snapshot of
	  public method at the beginning time.

	* lib/delegate.rb (SimpleDelegator#initialize): use
	  Delegator.public_api since public_method might be added after
	  initialization.  [ruby-dev:39383]

	* lib/delegate.rb (DelegateClass): ditto.

Mon Oct  5 12:22:12 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_{times, shuffle_bang, sample}): reducing macro
	  calls inside of the loop by keeping pointers in local